--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,15 @@
 body {
   margin: 0px;
+  padding-bottom: 70px;
 }
 
 .leaflet-container {
   height: 80vh;
   background-color: transparent;
+}
+
+.footer p {
+  margin-bottom: 0px;
 }
 
 .App {
